Updatne index.html

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="row">
 
             <div class="col-8">
-                <div class="content-box">
+                <div>
                     <h2 style="text-align: center;padding-top: 10px;">looks</h2>
                     <p style="text-align: center; font-size: 40px; font-family:fantasy;">williamsberg democrat</p>
                     <p style="text-align: center;">21/03/2014 <span style="color: orange;">2 comments</span>
@@ -115,7 +115,7 @@
 
 
             <div class="col-4">
-                <div class="sidebar-box">
+                <div>
                     <div class="sidee">
                         <div class="aboutme">
                             <h1 style="text-align: center; color: aliceblue;margin-top: 1px;">About</h1>
@@ -138,7 +138,7 @@
 
                         <div
                             style="width: 500px; margin: 80px auto; text-align: center; padding: 20px; background-color: #f8f9fa; border-radius: 8px;">
-                            <div class="social-icons">
+                            <div>
                                 <ul class="navbar-nav" style="flex-direction: row; justify-content: center; gap: 20px;">
                                     <li class="nav-item">
                                         <a class="nav-link" href="#"><i class="fab fa-facebook fa-2x"></i></a>
